# faceboxes_libtorch

./: CMakeLists.txt  LICENSE  README.md  anchor.pt  faceboxes.cpp  faceboxes.h  main.cpp  nms_cpu.cpp  nms_cpu.hpp  priorbox.cpp  priorbox.h
faceboxes/: faceboxes.cpp
model/: model.cpp  model.h  upwork.ipynb
